<resources>
    <string name="app_name">prj_Control_Financiero</string>

    <string name="titulo_registro">Registro de usuario</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_pin">PIN</string>
    <string name="hint_confirm_pin">Confirmar PIN</string>
    <string name="btn_crear_cuenta">Crear cuenta</string>

</resources>